tests/ui/regions/regions-steal-closure.stderr
error[E0597]: `i` does not live long enough
  --> $DIR/regions-steal-closure.rs:14:28
   |
LL |     let mut cl_box = {
   |         ---------- borrow later stored here
LL |         let mut i = 3;
   |             ----- binding `i` declared here
LL |         box_it(Box::new(|| i += 1))
   |                         -- ^ borrowed value does not live long enough
   |                         |
   |                         value captured here
LL |     };
   |     - `i` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
